--- a/src/components/TheHeader/TheHeader.module.css
+++ b/src/components/TheHeader/TheHeader.module.css
@@ -5,6 +5,7 @@
   position: sticky;
   top: 0;
   padding: 0.8em 0;
+  background-color: #fff;
   border-bottom: 0.1px solid #d3d3d3;
   z-index: 999;
 }
